@@ -70,11 +70,11 @@ deyo <- function(input.frame) {
 #' 
 #' @author Max
 prDeyo.apply.icd9 <- function(input.frame) {
-  n.rows <- length(input.frame[,1])
-  n.cols <- length(input.frame[1,])
-  output.frame <- matrix(0, nrow=n.rows, ncol=n.cols)
-  for (i in 1:n.rows){
-    for (j in 1:n.cols) {
+  output.frame <- matrix(0, 
+                         nrow=NROW(input.frame), 
+                         ncol=NCOL(input.frame))
+  for (i in 1:NROW(input.frame)){
+    for (j in 1:NCOL(input.frame)) {
       output.frame[i,j] <- prDeyo.ICD9.5digit(input.frame[i,j])
     }
   }
@@ -133,57 +133,52 @@ prDeyo.ICD9.5digit <- function(icd.code){
 #' @seealso \code{\link{deyo}}
 prDeyo.comorbidities <- function(input.frame) {
   #create lists of comorbidities
-  mi <- c(seq(from=41000L, to=41099L, by=1L),
-          41200L)
-  chf <- c(seq(from=42800L, to=42899L, by=1L))
-  pvd <- c(seq(44100L, 44199L, by=1L), # This should include everything under 441
-           seq(44390L, 44399L, by=1L), 
-           78540L) #v code v43.4 not included in this list
-  cvd <- c(seq(from=43000L, to=43799L, by=1L),
-           43813L, 43814L) # Note table cross saying that only late effects were included from the 438 group
-  dementia <- c(seq(from=29000L, to=29099L, by=1L))
-  copd <- c(seq(from=49000L, to=49699L, by=1L), 
-            seq(from=50000L, to=50599L, by=1L), 
-            50640L)
-  rheum <- c(71000L, 71010L, 71040L, 
-             seq(from=71400L, to=71429L, by=1L),
-             71481L, 72500L)
-  pud <- c(seq(from=53100L, to=53499L, by=1L))
-  mild.liver <- c(57120L, 57150L, 57160L, 
-                  seq(from=57140L, to=57149L, by=1L))
-  dm <- c(seq(from=25000L,to=25039L,by=1L),
-          25070L)
-  dm.comp <- c(seq(from=25040L, to=25069L, by=1L)) #2 point items start here
-  plegia <- c(34410L, 
-              seq(from=34200L, to=34299L, by=1L))
-  renal <- c(seq(from=58200L, to=58299L, by=1L), 
-             seq(from=58300L, to=58379L, by=1L),
-             seq(from=58500L, to=58599L, by=1L), # Multiple in group
-             58600L, # Only one in this group
-             seq(from=58800L, to=58899L, by=1L))
-  malignancy <- c(seq(from=14000L, to=17299L, by=1L), 
-                  seq(from=17400L, to=19589L, by=1L), 
-                  seq(from=20000L, to=20899L, by=1L))
-  severe.liver <- c(seq(from=57220L, to=57289L, by=1L),
-                    seq(from=45600L, to=45621L, by=1L)) # 3 point item
-  mets <- c(seq(from=19600L, to=19919L, by=1L)) # 6 point items
-  hiv <- c(seq(from=4200L, to=4493L, by=1L))
+  deyo.list <- 
+    list(
+      mi = c(seq(from=41000L, to=41099L, by=1L),
+             41200L),
+      chf = c(seq(from=42800L, to=42899L, by=1L)),
+      pvd = c(seq(44100L, 44199L, by=1L), # This should include everything under 441
+              seq(44390L, 44399L, by=1L), 
+              78540L), #v code v43.4 not included in this list
+      cvd = c(seq(from=43000L, to=43799L, by=1L),
+              43813L, 43814L), # Note table cross saying that only late effects were included from the 438 group
+      dementia = c(seq(from=29000L, to=29099L, by=1L)),
+      copd = c(seq(from=49000L, to=49699L, by=1L), 
+               seq(from=50000L, to=50599L, by=1L), 
+               50640L),
+      rheum = c(71000L, 71010L, 71040L, 
+                seq(from=71400L, to=71429L, by=1L),
+                71481L, 72500L),
+      pud = c(seq(from=53100L, to=53499L, by=1L)),
+      mild.liver = c(57120L, 57150L, 57160L, 
+                     seq(from=57140L, to=57149L, by=1L)),
+      dm = c(seq(from=25000L,to=25039L,by=1L),
+             25070L),
+      dm.comp = c(seq(from=25040L, to=25069L, by=1L)), #2 point items start here
+      plegia = c(34410L, 
+                 seq(from=34200L, to=34299L, by=1L)),
+      renal = c(seq(from=58200L, to=58299L, by=1L), 
+                seq(from=58300L, to=58379L, by=1L),
+                seq(from=58500L, to=58599L, by=1L), # Multiple in group
+                58600L, # Only one in this group
+                seq(from=58800L, to=58899L, by=1L)),
+      malignancy = c(seq(from=14000L, to=17299L, by=1L), 
+                     seq(from=17400L, to=19589L, by=1L), 
+                     seq(from=20000L, to=20899L, by=1L)),
+      severe.liver = c(seq(from=57220L, to=57289L, by=1L),
+                       seq(from=45600L, to=45621L, by=1L)), # 3 point item
+      mets = c(seq(from=19600L, to=19919L, by=1L)), # 6 point items
+      hiv = c(seq(from=4200L, to=4493L, by=1L)))
   
-  deyo.list <- list(mi = mi, chf = chf, pvd = pvd, # 3
-                    cvd = cvd, dementia = dementia, copd = copd, # 6
-                    rheum = rheum, pud = pud, mild.liver = mild.liver, # 9
-                    dm = dm, dm.comp = dm.comp, plegia = plegia, # 12
-                    renal = renal, malignancy = malignancy, severe.liver = severe.liver, # 15
-                    mets = mets, hiv = hiv) # 17
-  
-  n.rows <- length(input.frame[,1])
-  n.cols <- length(input.frame[1,])
-  output.frame <- matrix(0, nrow=n.rows, ncol=17)
+  output.frame <- matrix(0, 
+                         nrow=NROW(input.frame), 
+                         ncol=length(deyo.list))
   # Using the names for columns limits the risk of missing 
   colnames(output.frame) <- names(deyo.list)
   
-  for (i in 1:n.rows){
-    for (j in 1:n.cols) {
+  for (i in 1:NROW(input.frame)){
+    for (j in 1:NCOL(input.frame)) {
       for (k in names(deyo.list)) {
         if (input.frame[i, j] %in% deyo.list[[k]]) {
           output.frame[i,k] <- 1
@@ -218,8 +213,6 @@ prDeyo.comorbidities <- function(input.frame) {
 #'  existing comorbidity.
 #' @seealso \code{\link{deyo}}
 prDeyo.convert.to.points <- function(input.frame) {
-  n.rows <- length(input.frame[,1])
-  n.cols <- length(input.frame[1,])
   output.frame <- input.frame
   # Set all columns that have 2 points
   for (var in c("PLEGIA", "DM.COMP",
